--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "erikfig/code-facebook-bot-sdk": "dev-master",
+        "erikfig/code-facebook-bot-sdk": "1.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
