--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "erikfig/code-facebook-bot-sdk": "1.*",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "league/flysystem-aws-s3-v3": "^1.0"
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
